tests/ascriptions/ill-typed/bad-anonymous-function.stella
language core;

extend with #sum-types;

fn main(n : Nat) -> fn(Bool) -> Nat + Bool {
  return (fn (b : Bool) { return inl(n) })(true)
}